<resources>
    <string name="app_name">Beizimu</string>
    <string name="word_card">Card</string>
    <string name="group">Group</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="search_hint">enter a word</string>
    <string name="error_network">The network is not available, please check the network settings!</string>
    <string name="phoneticHint">phonetic\n↓ ↓</string>
    <string name="meansHint">means\n↓ ↓</string>
    <string name="next">Next</string>
    <string name="recent100">Recent 100</string>
    <string name="kaoYan">考研</string>
    <string name="GRE">GRE</string>
    <string name="TOEFL">TOEFL</string>
    <string name="CET6">CET6</string>
    <string name="CET4">CET4</string>
    <string name="searching">searching...</string>
    <string name="loading">loading</string>
    <string name="IELTS">IELTS</string>
    <string name="play">Play</string>
    <string name="importBatch">Import Batch</string>
    <string name="click2import">Click \'Import Batch\' to start..</string>
    <string name="cannotFindWordsFile">Can\'t find words file</string>
    <string name="importing">importing...</string>
    <string name="new_group">New Group</string>
    <string name="new_create">Create</string>
    <string name="add_to">add to</string>
</resources>
