<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/txtRecent100"
        android:text="@string/recent100"
        android:textSize="16sp"
        android:textColor="@color/fontBlack"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical|left"
        android:paddingStart="14dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lineGrey"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/txtCET4"
        android:text="@string/CET4"
        android:textSize="16sp"
        android:textColor="@color/fontBlack"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical|left"
        android:paddingStart="14dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lineGrey"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/txtCET6"
        android:text="@string/CET6"
        android:textSize="16sp"
        android:textColor="@color/fontBlack"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical|left"
        android:paddingStart="14dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lineGrey"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/txtToefl"
        android:text="@string/TOEFL"
        android:textSize="16sp"
        android:textColor="@color/fontBlack"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical|left"
        android:paddingStart="14dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lineGrey"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/txtGRE"
        android:text="@string/GRE"
        android:textSize="16sp"
        android:textColor="@color/fontBlack"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical|left"
        android:paddingStart="14dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lineGrey"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/txtKaoYan"
        android:text="@string/kaoYan"
        android:textSize="16sp"
        android:textColor="@color/fontBlack"
        android:foreground="?selectableItemBackground"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical|left"
        android:paddingStart="14dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lineGrey"/>

</LinearLayout>