<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/view_margin_start"
    android:paddingEnd="@dimen/view_margin_start">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtWord"
        android:textColor="@color/fontBlack"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:text="phoneticSymbol"/>
    <TextView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/txtInfo"
        android:text="i"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@drawable/new_msg_bg_red"
        android:layout_toRightOf="@id/txtWord"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="10dp"/>
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/barRating"
        android:visibility="gone"
        android:layout_below="@id/txtWord"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:numStars="5"
        android:rating="5"
        android:stepSize="1"
        android:isIndicator="true"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPhoneticHint"
        android:text="@string/phoneticHint"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/barRating"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/layoutPhonetic"
        android:gravity="center_vertical"
        android:layout_below="@id/barRating"
        android:orientation="horizontal"
        android:visibility="invisible">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtPhoneticEn"
            android:textColor="@color/fontBlue"
            android:textSize="20dp"
            android:gravity="center_vertical|start"
            android:layout_weight="1"
            tools:text="en \n [ ˌɔ:təˌbaɪə'ɡræfɪkl ] "/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtPhoneticAm"
            android:textColor="@color/fontBlue"
            android:textSize="20dp"
            android:gravity="center_vertical|start"
            android:layout_weight="1"
            tools:text="am  \n[ ˌɔtəˌbaɪəˈɡræfɪkl ] "/>
    </LinearLayout>


    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMeansHint"
        android:text="@string/meansHint"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/layoutPhonetic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtMeans"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/view_margin_start"
        android:gravity="start|top"
        android:textColor="@color/fontBlack"
        android:textSize="20sp"
        android:layout_below="@id/layoutPhonetic"
        tools:text="adj.自传的，自传体的； 自传作家的；\nadj.自传的，自传体的； 自传作家的；"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNext"
        android:text="@string/next"
        android:textSize="45dp"
        android:textColor="@color/brightBlue"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>
</RelativeLayout>